2010-02-19  Steve Block  <steveblock@google.com>

        Reviewed by David Levin.

        Sets default values of V8 runtime enabler flags to match behavior with JSC
        https://bugs.webkit.org/show_bug.cgi?id=35095

        No new tests, modifies a Chromium feature only.

        * bindings/generic/RuntimeEnabledFeatures.cpp: Modified. Sets appcache and geolocation flag defaults to 'on'
        * storage/Database.cpp: Modified. Sets database flag default to 'on'.

2010-02-19  Alexander Pavlov  <apavlov@chromium.org>

        Reviewed by Pavel Feldman.

        WebInspector: Elements panel: Correctly show empty elements' ending tags
        for XML and HTML documents.
        https://bugs.webkit.org/show_bug.cgi?id=26315

        Test: inspector/elements-panel-xhtml-structure.xhtml

        * inspector/InspectorController.cpp:
        (WebCore::InspectorController::populateScriptObjects):
        * inspector/front-end/ElementsTreeOutline.js:
        (WebInspector.ElementsTreeOutline.prototype.set rootDOMNode):
        (WebInspector.ElementsTreeOutline.prototype.get isXMLMimeType):
        (WebInspector.ElementsTreeOutline.prototype._contextMenuEventFired):
        (WebInspector.ElementsTreeElement.prototype.onexpand):
        (WebInspector.ElementsTreeElement.prototype.oncollapse):
        (WebInspector.ElementsTreeElement.prototype.updateTitle.callback):
        (WebInspector.ElementsTreeElement.prototype.updateTitle):
        (WebInspector.ElementsTreeElement.prototype._nodeTitleInfo):

2010-02-19  Pavel Feldman  <pfeldman@chromium.org>

        Not reviewed. Chromium build fix: reverting r54997 and r54998.

        * bindings/v8/custom/V8LocationCustom.cpp:
        (WebCore::V8Location::protocolAccessorSetter):
        * platform/KURLGoogle.cpp:
        (WebCore::KURL::setProtocol):
        (WebCore::KURL::isHierarchical):

2010-02-17  Philippe Normand  <pnormand@igalia.com>

        Reviewed by Eric Seidel.

        [GTK] RTP/RTSP streams playback support